// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerChartLabelBadge Render the chart label in one line. 1`] = `
<Fragment>
  <span
    className="ml-explorer-chart-label"
  >
    <span
      className="ml-explorer-chart-label-detector"
    >
      high_sum(nginx.access.body_sent.bytes) over nginx.access.remote_ip (population-03)
       – 
    </span>
    <EuiFlexGroup
      alignItems="center"
      gutterSize="none"
      key="badge-wrapper-sum nginx.access.body_sent.bytes-nginx.access.remote_ip-undefined-72.57.0.53"
    >
      <EuiFlexItem
        grow={false}
      >
        <ExplorerChartLabelBadge
          entity={
            Object {
              "$$hashKey": "object:813",
              "fieldName": "nginx.access.remote_ip",
              "fieldValue": "72.57.0.53",
            }
          }
        />
      </EuiFlexItem>
    </EuiFlexGroup>
     
    <span
      className="ml-explorer-chart-info-icon"
    >
      <EuiIconTip
        className="ml-explorer-chart-eui-icon-tip"
        content={
          <ExplorerChartInfoTooltip
            aggregationInterval="1h"
            chartFunction="sum nginx.access.body_sent.bytes"
            entityFields={
              Array [
                Object {
                  "fieldName": "nginx.access.remote_ip",
                  "fieldValue": "72.57.0.53",
                },
              ]
            }
            jobId="population-03"
          />
        }
        position="top"
        size="s"
      />
    </span>
  </span>
</Fragment>
`;

exports[`ExplorerChartLabelBadge Render the chart label in two lines. 1`] = `
<Fragment>
  <span
    className="ml-explorer-chart-label"
  >
    <span
      className="ml-explorer-chart-label-detector"
    >
      high_sum(nginx.access.body_sent.bytes) over nginx.access.remote_ip (population-03)
       
    </span>
    <span
      className="ml-explorer-chart-info-icon"
    >
      <EuiIconTip
        className="ml-explorer-chart-eui-icon-tip"
        content={
          <ExplorerChartInfoTooltip
            aggregationInterval="1h"
            chartFunction="sum nginx.access.body_sent.bytes"
            entityFields={
              Array [
                Object {
                  "fieldName": "nginx.access.remote_ip",
                  "fieldValue": "72.57.0.53",
                },
              ]
            }
            jobId="population-03"
          />
        }
        position="top"
        size="s"
      />
    </span>
  </span>
  <span
    className="ml-explorer-chart-label-badges"
  >
    <EuiFlexGroup
      alignItems="center"
      gutterSize="none"
      key="badge-wrapper-sum nginx.access.body_sent.bytes-nginx.access.remote_ip-undefined-72.57.0.53"
    >
      <EuiFlexItem
        grow={false}
      >
        <ExplorerChartLabelBadge
          entity={
            Object {
              "$$hashKey": "object:813",
              "fieldName": "nginx.access.remote_ip",
              "fieldValue": "72.57.0.53",
            }
          }
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </span>
</Fragment>
`;
